# crud-analytics-api

./: .env  .gitignore  README.md  pyproject.toml  todolist.txt
api/: app.py  schemas.py
api/auth/: router.py  utils.py
api/core/: database.py  models.py  security.py  settings.py
api/sales/: router.py
api/users/: router.py  schemas.py
crud_analytics_api/: app.py  models.py  settings.py
crud_analytics_api/core/: models.py
crud_analytics_api/routers/: sales.py
crud_analytics_api/users/: schemas.py  users.py
migrations/: env.py
migrations/versions/: 736830fe1ece_create_users_and_sales_table.py  e92bfe40a6ef_create_users_and_sales_table.py
tests/: conftest.py  test_app.py  test_sales.py  test_users.py
tests/auth/: test_router.py  test_utils.py
tests/core/: test_security.py
tests/users/: test_router.py
